updated footer text color

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -54,7 +54,7 @@ body {
 
 .footer-text {
     display: block; 
-    color: #C48D55;
+    color: white;
     font-style: italic;
     font-weight: bold; 
 }
